要闻界面调整 接口

--- a/elapp/src/main/res/layout/item_powerful_person_news.xml
+++ b/elapp/src/main/res/layout/item_powerful_person_news.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/user_tag_bg"
     >
     <View
@@ -26,9 +26,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginBottom="10dp"
         android:layout_below="@id/item_line"/>
 </RelativeLayout>
