--- a/elapp/src/main/res/layout/item_one_img_news.xml
+++ b/elapp/src/main/res/layout/item_one_img_news.xml
@@ -44,6 +44,7 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -56,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_color_gray"
                     android:textSize="14sp"
                     tools:text="今天 14:20"/>
 
@@ -71,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/text_gray"
+                    android:textColor="@color/text_color_gray"
                     android:textSize="14sp"
                     tools:text="183123"/>
 
