--- a/elapp/src/main/res/layout/item_person.xml
+++ b/elapp/src/main/res/layout/item_person.xml
@@ -6,15 +6,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="128dp"
     android:layout_height="168dp"
-    android:layout_gravity="center"
     android:background="@color/white"
     app:cardCornerRadius="5dp"
-    app:cardElevation="2dp">
+    android:layout_marginRight="12dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="2dp"
+    android:foreground="?attr/selectableItemBackground"
+    app:cardElevation="3dp">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <com.easyvaas.common.widget.MyUserPhoto
+    <com.easyvaas.elapp.view.CircleImageView
         android:id="@+id/item_person_avator"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -52,7 +56,7 @@
             android:textSize="16sp"
             android:textColor="@color/text_gray"
             android:layout_marginLeft="2dp"
-            tools:text="人关注"/>
+            android:text="@string/focus"/>
     </LinearLayout>
 
 </LinearLayout>
