--- a/elapp/src/main/res/layout/view_important_news_header.xml
+++ b/elapp/src/main/res/layout/view_important_news_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/news_list_bg_color"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="78dp"
         android:orientation="horizontal"
+        android:background="@color/white"
         android:paddingTop="10dp">
 
         <LinearLayout
@@ -54,7 +55,7 @@
             android:layout_width="1dp"
             android:layout_height="49dp"
             android:layout_gravity="center_vertical"
-            android:background="@color/base_gray" />
+            android:background="#dddddd" />
 
         <LinearLayout
             android:id="@+id/ll_exponent2"
@@ -93,7 +94,7 @@
             android:layout_width="1dp"
             android:layout_height="49dp"
             android:layout_gravity="center_vertical"
-            android:background="@color/base_gray" />
+            android:background="#dddddd" />
 
         <LinearLayout
             android:id="@+id/ll_exponent3"
@@ -129,14 +130,24 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="7dp"
         android:layout_marginRight="7dp"
         android:layout_marginTop="16dp"
-        android:background="@android:color/white"
+        app:cardCornerRadius="4dp"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="false"
+        app:cardElevation="2dp">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:background="#fafafa"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -279,5 +290,7 @@
                 android:textColor="@color/title_text_color"
                 android:textSize="14sp" />
         </LinearLayout>
+
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
