--- a/elapp/src/main/res/layout/item_market_global_stock.xml
+++ b/elapp/src/main/res/layout/item_market_global_stock.xml
@@ -1,76 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="63dp"
-    android:background="#fff">
+    android:background="#ffffff"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="22dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="62dp"
+        android:background="?attr/selectableItemBackground">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_marginLeft="22dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_national_flag"
-                android:layout_width="18dp"
-                android:layout_height="12dp"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_national_flag"
+                    android:layout_width="18dp"
+                    android:layout_height="12dp"/>
+
+                <TextView
+                    android:id="@+id/tv_stock_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"
+                    android:layout_marginLeft="4dp"
+                    android:text="N安车"
+                    android:textColor="@color/market_list_stock_name"
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_stock_name"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_price"
+                android:layout_width="0dp"
                 android:layout_height="22dp"
-                android:layout_marginLeft="4dp"
-                android:text="N安车"
-                android:textColor="@color/market_list_stock_name"
-                android:textSize="16sp"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="0dp"
-            android:layout_height="22dp"
-            android:layout_weight="1"
-            android:paddingLeft="12dp"
-            android:text="192.11"
-            android:textColor="@color/selector_stock_state_color"
-            android:textSize="16sp"/>
-
-        <RelativeLayout
-            android:layout_width="80dip"
-            android:layout_height="match_parent"
-            android:layout_marginRight="10dp">
-
-            <TextView
-                android:id="@+id/tv_percent"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp"
-                android:layout_centerVertical="true"
-                android:gravity="center|left"
-                android:text="444.141%"
+                android:layout_weight="1"
+                android:paddingLeft="12dp"
+                android:text="192.11"
                 android:textColor="@color/selector_stock_state_color"
                 android:textSize="16sp"/>
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="80dip"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_percent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"
+                    android:layout_centerVertical="true"
+                    android:gravity="center|left"
+                    android:text="444.141%"
+                    android:textColor="@color/selector_stock_state_color"
+                    android:textSize="16sp"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <View
         android:id="@+id/view_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
         android:layout_marginLeft="22dp"
         android:layout_marginRight="10dp"
-        android:background="@color/split_line_color"/>
+        android:background="@color/split_line_market"/>
 
-</RelativeLayout>
+</LinearLayout>
