--- a/elapp/src/main/res/layout/item_market_list_title.xml
+++ b/elapp/src/main/res/layout/item_market_list_title.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:orientation="vertical">
 
     <View
         android:id="@+id/view_top_blank"
@@ -20,11 +20,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="11dp"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
         android:paddingLeft="12dp"
-        android:paddingBottom="5dp">
+        android:paddingTop="11dp">
 
         <View
             android:id="@+id/view_exponent"
@@ -49,6 +49,6 @@
         android:id="@+id/market_list_title_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/market_list_line1"/>
+        android:background="@color/split_line_market"/>
 
 </LinearLayout>
