--- a/elapp/src/main/res/layout/item_special_topic_news.xml
+++ b/elapp/src/main/res/layout/item_special_topic_news.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@+id/item_news_layout"
+<FrameLayout android:id="@+id/item_topic_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
