--- a/elapp/src/main/res/layout/item_news_column.xml
+++ b/elapp/src/main/res/layout/item_news_column.xml
@@ -1,96 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="164dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
-    android:foreground="?attr/selectableItemBackground"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="3dp">
+    android:orientation="horizontal"
+    android:paddingTop="10dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="2dp"
+        android:foreground="?attr/selectableItemBackground"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="1dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/news_column_cover"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
+                android:layout_height="100dp">
 
-            <com.easyvaas.elapp.view.CircleImageView
-                android:id="@+id/news_column_avatar"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="14dp"/>
+                <ImageView
+                    android:id="@+id/news_column_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"/>
 
-            <TextView
-                android:id="@+id/news_column_nickname"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_alignBottom="@+id/news_column_avatar"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="20dp"
-                android:layout_toRightOf="@+id/news_column_avatar"
-                android:ellipsize="end"
-                android:maxLength="6"
-                android:singleLine="true"
-                android:text="财经达人财经"
-                android:textColor="@color/white"
-                android:textSize="14sp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#11000000"/>
 
-            <TextView
-                android:id="@+id/news_column_introduce_user"
-                android:layout_width="match_parent"
+                <RelativeLayout
+                    android:id="@+id/news_column_user"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground">
+
+                    <com.easyvaas.elapp.view.CircleImageView
+                        android:id="@+id/news_column_avatar"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="14dp"/>
+
+                    <TextView
+                        android:id="@+id/news_column_nickname"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:layout_alignBottom="@+id/news_column_avatar"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_toRightOf="@+id/news_column_avatar"
+                        android:ellipsize="end"
+                        android:maxLength="6"
+                        android:singleLine="true"
+                        android:text="财经达人财经"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"/>
+
+                    <TextView
+                        android:id="@+id/news_column_introduce_user"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/news_column_avatar"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="6dp"
+                        android:ellipsize="end"
+                        android:lineSpacingExtra="2dp"
+                        android:maxLines="2"
+                        android:text="火眼财经资深投顾火眼财经资深"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"/>
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/news_column_article"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/news_column_avatar"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="6dp"
-                android:ellipsize="end"
-                android:lineSpacingExtra="2dp"
-                android:maxLines="2"
-                android:text="火眼财经资深投顾火眼财经资深"
-                android:textColor="@color/white"
-                android:textSize="14sp"/>
+                android:background="?attr/selectableItemBackground"
+                android:orientation="vertical"
+                android:paddingBottom="14dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="12dp">
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/news_column_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="2dp"
+                    android:text="菲总统信任度民调微降 或因禁毒致大量居民死亡"
+                    android:textColor="#303030"
+                    android:textSize="16sp"/>
 
-        <TextView
-            android:id="@+id/news_column_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="12dp"
-            android:lineSpacingExtra="2dp"
-            android:text="菲总统信任度民调微降 或因禁毒致大量居民死亡"
-            android:textColor="#303030"
-            android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/news_column_introduce"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:ellipsize="end"
+                    android:lineSpacingExtra="2dp"
+                    android:maxLines="4"
+                    android:text="据英国路透社4月5日消息，菲律宾总统杜特尔特的信任评级在2017年前3个月的民调中略有下降，政治..."
+                    android:textColor="#999999"
+                    android:textSize="12sp"/>
 
-        <TextView
-            android:id="@+id/news_column_introduce"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="14dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="4dp"
-            android:ellipsize="end"
-            android:lineSpacingExtra="2dp"
-            android:maxLines="4"
-            android:text="据英国路透社4月5日消息，菲律宾总统杜特尔特的信任评级在2017年前3个月的民调中略有下降，政治..."
-            android:textColor="#999999"
-            android:textSize="12sp"/>
+            </LinearLayout>
 
-    </LinearLayout>
+        </LinearLayout>
 
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
