--- a/elapp/src/main/res/layout/acivity_topic_layout.xml
+++ b/elapp/src/main/res/layout/acivity_topic_layout.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:elevation="0.5dp"
@@ -18,7 +18,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/white"
             app:expandedTitleMarginEnd="64dp"
@@ -32,10 +32,16 @@
                 android:contentDescription="@null"
                 android:fitsSystemWindows="true"
                 android:scaleType="fitXY"
+                android:visibility="gone"
                 android:src="@drawable/test_img"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.8"
                 app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed" />
+            <include
+
+                app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed"
+                layout="@layout/topic_header_layout"
+                />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -56,7 +62,7 @@
                         android:layout_height="match_parent"
                         android:src="@drawable/icon_back"/>
                     <TextView
-                        android:id="@+id/topic_title"
+                        android:id="@+id/topic_title_top"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
