--- a/elapp/src/main/res/layout/item_one_img_news.xml
+++ b/elapp/src/main/res/layout/item_one_img_news.xml
@@ -34,8 +34,9 @@
                 android:id="@+id/item_news_title"
                 style="@style/title_text_style"
                 android:layout_marginLeft="10dp"
-                android:minHeight="40dp"
-                tools:text="每个人都有属于自己的一片森林"
+                android:layout_marginStart="10dp"
+                android:lines="2"
+                tools:text="每个人都有属于自己的一片森林，也许我们 从来不曾去过，但它一直在那里，总会在那里。迷失的人迷失了，相逢的人会再相逢，也许我们 从来不曾去过，但它一直在那里，总会在那里。迷失的人迷失了，相逢的人会再相逢"
                 />
 
 
