--- a/elapp/src/main/res/layout/item_special_topic_news.xml
+++ b/elapp/src/main/res/layout/item_special_topic_news.xml
@@ -22,7 +22,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:background="#822e2e2e"
+        android:background="@color/special_topic_bg"
         android:orientation="vertical">
 
         <TextView
