--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -191,6 +191,7 @@
     <color name="topic_yellow">#ffe07e</color>
     <color name="item_line_purple">#8531e2</color>
     <color name="number_purple">#50007e</color>
+    <color name="special_topic_bg">#822e2e2e</color>
 
 
 </resources>
