专栏---性能优化。 行情---滑动悬浮。

--- a/elapp/src/main/res/layout/item_market_global_stock.xml
+++ b/elapp/src/main/res/layout/item_market_global_stock.xml
@@ -36,6 +36,7 @@
                     android:layout_height="22dp"
                     android:layout_marginLeft="4dp"
                     android:text="N安车"
+                    android:maxLines="1"
                     android:textColor="@color/market_list_stock_name"
                     android:textSize="16sp"/>
 
