--- a/elapp/src/main/res/layout/item_market_optional_stock.xml
+++ b/elapp/src/main/res/layout/item_market_optional_stock.xml
@@ -40,6 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:text="N安车"
+                    android:maxLines="1"
                     android:textColor="@color/market_list_stock_name"
                     android:textSize="16sp"/>
 
