--- a/elapp/src/main/res/layout/fragment_my_stock.xml
+++ b/elapp/src/main/res/layout/fragment_my_stock.xml
@@ -9,18 +9,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color_gray"
+    android:background="@color/list_divider_bg"
     android:orientation="vertical">
 
     <com.easyvaas.common.recycler.PullToLoadView
         android:id="@+id/pull_load_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
 
     <include
         layout="@layout/layout_my_stock_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
         android:visibility="gone"/>
 </RelativeLayout>
