--- a/elapp/src/main/res/layout/item_market_global_stock.xml
+++ b/elapp/src/main/res/layout/item_market_global_stock.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="63dp"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
     android:orientation="vertical">
 
@@ -80,5 +80,11 @@
         android:layout_marginLeft="22dp"
         android:layout_marginRight="10dp"
         android:background="@color/split_line_market"/>
+
+    <View
+        android:id="@+id/view_bottom_blank"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/list_divider_bg"/>
 
 </LinearLayout>
