--- a/elapp/src/main/res/drawable/selector_stock_rank_tag.xml
+++ b/elapp/src/main/res/drawable/selector_stock_rank_tag.xml
@@ -7,12 +7,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <solid android:color="@color/text_color_stock_up" />
+            <solid android:color="#ae3231" />
         </shape>
     </item>
     <item android:state_selected="false">
         <shape>
-            <solid android:color="@color/text_color_stock_down" />
+            <solid android:color="#258f46" />
         </shape>
     </item>
 </selector>
