--- a/elapp/src/main/res/layout/item_market_list_exponent.xml
+++ b/elapp/src/main/res/layout/item_market_list_exponent.xml
@@ -4,52 +4,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <com.easyvaas.elapp.view.ExponentCellView
-        android:id="@+id/exponent1"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
-        android:foreground="?attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/exponent_up"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="3dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:orientation="horizontal">
 
-    <com.easyvaas.elapp.view.ExponentCellView
-        android:id="@+id/exponent2"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
-        android:foreground="?attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/exponent_up"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="3dp"/>
+        <com.easyvaas.elapp.view.ExponentCellView
+            android:id="@+id/exponent1"
+            android:layout_width="0dp"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/exponent_up"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"/>
 
-    <com.easyvaas.elapp.view.ExponentCellView
-        android:id="@+id/exponent3"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
-        android:foreground="?attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/exponent_down"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="3dp"/>
+        <com.easyvaas.elapp.view.ExponentCellView
+            android:id="@+id/exponent2"
+            android:layout_width="0dp"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/exponent_up"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"/>
+
+        <com.easyvaas.elapp.view.ExponentCellView
+            android:id="@+id/exponent3"
+            android:layout_width="0dp"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/exponent_down"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="3dp"/>
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view_bottom_blank"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/list_divider_bg"/>
 
 </LinearLayout>
