--- a/elapp/src/main/res/layout/item_market_list_stock.xml
+++ b/elapp/src/main/res/layout/item_market_list_stock.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="63dp"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
     android:orientation="vertical">
 
@@ -39,8 +39,8 @@
                     android:id="@+id/tv_stock_name"
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"
-                    android:text="N安车"
                     android:maxLines="1"
+                    android:text="N安车"
                     android:textColor="@color/market_list_stock_name"
                     android:textSize="16sp"/>
 
@@ -87,5 +87,11 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="10dp"
         android:background="@color/split_line_market"/>
+
+    <View
+        android:id="@+id/view_bottom_blank"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/list_divider_bg"/>
 
 </LinearLayout>
