--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -193,5 +193,6 @@
     <color name="number_purple">#50007e</color>
     <color name="special_topic_bg">#822e2e2e</color>
 
+    <color name="banner_number">#a2612c80</color>
 
 </resources>
