--- a/elapp/src/main/res/layout/item_news_column.xml
+++ b/elapp/src/main/res/layout/item_news_column.xml
@@ -15,27 +15,32 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="2dp"
         android:foreground="?attr/selectableItemBackground"
+        android:minWidth="160dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minWidth="160dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="100dp"
+                android:minWidth="160dp">
 
                 <ImageView
                     android:id="@+id/news_column_cover"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:minWidth="160dp"
                     android:scaleType="centerCrop"/>
 
                 <RelativeLayout
                     android:id="@+id/news_column_user"
                     android:layout_width="match_parent"
+                    android:minWidth="160dp"
                     android:layout_height="match_parent"
                     android:background="?attr/selectableItemBackground">
 
