--- a/elapp/src/main/res/layout/item_one_img_news.xml
+++ b/elapp/src/main/res/layout/item_one_img_news.xml
@@ -21,7 +21,7 @@
             android:layout_width="110dp"
             android:layout_height="80dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/test_img"
+            android:src="@drawable/account_bitmap_list"
             />
 
         <LinearLayout
