--- a/elapp/src/main/res/layout/swiperefresh_layout.xml
+++ b/elapp/src/main/res/layout/swiperefresh_layout.xml
@@ -17,6 +17,10 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <include layout="@layout/layout_empty"/>
+  <com.easyvaas.elapp.view.base.MyEmptyView
+      android:id="@+id/empty_view"
+      android:visibility="gone"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
 </FrameLayout>
