--- a/elapp/src/main/res/layout/my_empty_layout.xml
+++ b/elapp/src/main/res/layout/my_empty_layout.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textSize="16sp"
         android:text="@string/empty_no_data"
         android:textColor="@color/text_color_gray" />
 
