--- a/elapp/src/main/res/layout/activity_user_info.xml
+++ b/elapp/src/main/res/layout/activity_user_info.xml
@@ -3,22 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f7f7f7"
+    android:baselineAligned="false"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f7f7f7"
-        android:baselineAligned="false"
-        android:fitsSystemWindows="true"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <include
-            android:id="@+id/common_title_tv"
-            layout="@layout/common_header_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,15 +23,14 @@
                 android:id="@+id/user_info_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="82dp"
-                android:background="?attr/selectableItemBackground"
-                android:paddingLeft="16dp"
-                android:paddingRight="14dp">
+                android:background="?attr/selectableItemBackground">
 
                 <TextView
                     android:id="@+id/tv_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
                     android:text="@string/default_user_image"
                     android:textColor="@color/base_gray"
                     android:textSize="@dimen/text_size_16"/>
@@ -71,8 +63,8 @@
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_arrow_right_personal_more"/>
+                    android:layout_marginRight="14dp"
+                    android:src="@drawable/arrow_right_xm"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -85,7 +77,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/user_info_item_1"
+                android:id="@+id/user_info_item_nickname"
                 style="@style/item_user_info_edit"
                 android:background="@color/white">
 
@@ -108,10 +100,11 @@
                     android:layout_toRightOf="@id/nickname_tv"
                     android:background="@null"
                     android:gravity="center_vertical|left"
+                    android:hint="@string/nickname"
                     android:maxLength="15"
                     android:maxLines="1"
-                    android:text="@string/nickname"
                     android:textColor="@color/text_user_info_edit"
+                    android:textColorHint="@color/text_user_info_hint"
                     android:textSize="@dimen/text_size_16"/>
 
             </RelativeLayout>
@@ -126,7 +119,7 @@
             android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/user_info_item_3"
+                android:id="@+id/user_info_item_sex"
                 style="@style/item_user_info_edit"
                 android:background="?attr/selectableItemBackground">
 
@@ -159,13 +152,12 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="14dp"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_arrow_right_personal_more"/>
+                    android:src="@drawable/arrow_right_xm"/>
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/user_info_item_5"
+                android:id="@+id/user_info_item_area"
                 style="@style/item_user_info_edit"
                 android:background="?attr/selectableItemBackground">
 
@@ -207,13 +199,12 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="14dp"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_arrow_right_personal_more"/>
+                    android:src="@drawable/arrow_right_xm"/>
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/user_info_item_6"
+                android:id="@+id/user_info_item_self"
                 style="@style/item_user_info_edit"
                 android:background="?attr/selectableItemBackground">
 
@@ -244,9 +235,10 @@
                     android:layout_toRightOf="@id/signature_tv"
                     android:ellipsize="end"
                     android:gravity="center_vertical|left"
-                    android:maxLines="1"
-                    android:text="@string/hint_signature"
+                    android:hint="@string/hint_signature"
+                    android:maxLines="2"
                     android:textColor="@color/text_user_info_edit"
+                    android:textColorHint="@color/text_user_info_hint"
                     android:textSize="@dimen/text_size_16"/>
 
                 <ImageView
@@ -256,13 +248,12 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="14dp"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_arrow_right_personal_more"/>
+                    android:src="@drawable/arrow_right_xm"/>
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/user_certificate"
+                android:id="@+id/user_info_item_certificate"
                 style="@style/item_user_info_edit">
 
                 <View
@@ -296,12 +287,13 @@
                     android:hint="@string/certificate_hint"
                     android:maxLines="1"
                     android:textColor="@color/text_user_info_edit"
+                    android:textColorHint="@color/text_user_info_hint"
                     android:textSize="@dimen/text_size_16"/>
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/user_label"
+                android:id="@+id/user_info_item_label"
                 style="@style/item_user_info_edit"
                 android:background="?attr/selectableItemBackground">
 
@@ -339,8 +331,61 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="14dp"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_arrow_right_personal_more"/>
+                    android:src="@drawable/arrow_right_xm"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/user_info_item_introduce"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:background="?attr/selectableItemBackground">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="13dp"
+                    android:background="#eeeeee"/>
+
+                <TextView
+                    android:id="@+id/introduce_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center"
+                    android:text="@string/introduce"
+                    android:textColor="@color/base_gray"
+                    android:textSize="@dimen/text_size_16"/>
+
+                <TextView
+                    android:id="@+id/introduce_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="14dp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_toLeftOf="@+id/arrow_iv8"
+                    android:layout_toRightOf="@id/introduce_tv"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:hint="@string/introduce_hint"
+                    android:lineSpacingExtra="3dp"
+                    android:maxLines="3"
+                    android:minHeight="50dp"
+                    android:textColor="@color/text_user_info_edit"
+                    android:textColorHint="@color/text_user_info_hint"
+                    android:textSize="@dimen/text_size_16"/>
+
+                <ImageView
+                    android:id="@+id/arrow_iv8"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="14dp"
+                    android:src="@drawable/arrow_right_xm"/>
 
             </RelativeLayout>
 
