--- a/elapp/src/main/res/layout/item_news_column.xml
+++ b/elapp/src/main/res/layout/item_news_column.xml
@@ -5,14 +5,15 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:background="@color/white"
     android:paddingTop="10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="2dp"
         android:foreground="?attr/selectableItemBackground"
         android:minWidth="160dp"
