--- a/elapp/src/main/res/layout/item_no_img_news.xml
+++ b/elapp/src/main/res/layout/item_no_img_news.xml
@@ -4,11 +4,16 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="?attr/selectableItemBackground"
+              android:background="@color/white"
               android:orientation="vertical"
-              android:paddingRight="12dp"
-              android:paddingTop="12dp">
-
+             >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:paddingRight="12dp"
+        android:paddingTop="12dp">
     <TextView
         android:id="@+id/item_news_title"
         style="@style/title_text_style"
@@ -24,4 +29,5 @@
         style="@style/divider_view_style"
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"/>
+    </LinearLayout>
 </LinearLayout>
