--- a/elapp/src/main/res/layout/item_one_img_news.xml
+++ b/elapp/src/main/res/layout/item_one_img_news.xml
@@ -4,16 +4,18 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="?attr/selectableItemBackground"
               android:orientation="vertical"
-              android:paddingLeft="12dp"
-              android:paddingRight="12dp"
-              android:paddingTop="12dp">
+              android:background="@color/white"
+              >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="?attr/selectableItemBackground"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="12dp"
         >
 
         <ImageView
