--- a/elapp/src/main/res/layout/swiperefresh_layout.xml
+++ b/elapp/src/main/res/layout/swiperefresh_layout.xml
@@ -13,6 +13,7 @@
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:overScrollMode="never"
+            android:background="@color/empty_bg"
             android:layout_height="match_parent"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
