--- a/elapp/src/main/res/layout/view_important_news_header.xml
+++ b/elapp/src/main/res/layout/view_important_news_header.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/white"
+              android:orientation="vertical"
+              android:paddingTop="4dp">
 
     <include
         android:id="@+id/banner_layout"
-        layout="@layout/view_header_discover_slider" />
+        layout="@layout/view_header_discover_slider"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
-        android:orientation="horizontal"
         android:background="@color/white"
+        android:orientation="horizontal"
         android:paddingTop="10dp">
 
         <LinearLayout
@@ -32,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="上证" />
+                tools:text="上证"/>
 
             <TextView
                 android:id="@+id/tv_exponent_number1"
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="20sp"
-                tools:text="3243.32" />
+                tools:text="3243.32"/>
 
             <TextView
                 android:id="@+id/tv_exponent_percent1"
@@ -48,14 +49,14 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="-5.5[-0.17%]" />
+                tools:text="-5.5[-0.17%]"/>
         </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="49dp"
             android:layout_gravity="center_vertical"
-            android:background="#dddddd" />
+            android:background="#dddddd"/>
 
         <LinearLayout
             android:id="@+id/ll_exponent2"
@@ -71,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="深成" />
+                tools:text="深成"/>
 
             <TextView
                 android:id="@+id/tv_exponent_number2"
@@ -79,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="20sp"
-                tools:text="11002.90" />
+                tools:text="11002.90"/>
 
             <TextView
                 android:id="@+id/tv_exponent_percent2"
@@ -87,14 +88,14 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="+27.53[+0.25%]" />
+                tools:text="+27.53[+0.25%]"/>
         </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="49dp"
             android:layout_gravity="center_vertical"
-            android:background="#dddddd" />
+            android:background="#dddddd"/>
 
         <LinearLayout
             android:id="@+id/ll_exponent3"
@@ -110,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="创业板" />
+                tools:text="创业板"/>
 
             <TextView
                 android:id="@+id/tv_exponent_number3"
@@ -118,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="20sp"
-                tools:text="2163.42" />
+                tools:text="2163.42"/>
 
             <TextView
                 android:id="@+id/tv_exponent_percent3"
@@ -126,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="-2.23[-0.10%]" />
+                tools:text="-2.23[-0.10%]"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -140,156 +141,156 @@
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="#fafafa"
-        app:cardPreventCornerOverlap="false"
         app:cardCornerRadius="5dp"
-        app:cardElevation="2dp">
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="false">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="10dp"
-                android:drawableLeft="@drawable/hooview_gold_eyes"
-                android:drawablePadding="6dp"
-                android:text="@string/hooview_gold_eye"
-                android:textColor="@color/title_text_color"
-                android:textSize="16sp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_refresh_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@+id/tv_title"
-                android:text="11：00"
-                android:textColor="@color/text_color_gray"
-                android:textSize="14sp"
-                android:visibility="gone" />
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="10dp"
+                    android:drawableLeft="@drawable/hooview_gold_eyes"
+                    android:drawablePadding="6dp"
+                    android:text="@string/hooview_gold_eye"
+                    android:textColor="@color/title_text_color"
+                    android:textSize="16sp"/>
 
-            <TextView
-                android:id="@+id/tv_load_more"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tv_refresh_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_toRightOf="@+id/tv_title"
+                    android:text="11：00"
+                    android:textColor="@color/text_color_gray"
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/tv_load_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="16dp"
+                    android:text="@string/load_more"
+                    android:textColor="@color/text_color_gray"
+                    android:textSize="16sp"/>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_eye_new1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_1"
+                    android:layout_width="6dp"
+                    android:layout_height="6dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="12dp"
+                    android:src="@drawable/hooview_gold_eye_point"/>
+
+
+                <TextView
+                    android:id="@+id/tv_eyes_news1"
+                    android:layout_width="match_parent"
+                    android:layout_height="54dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="12dp"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:maxLines="2"
+                    android:text=""
+                    android:textColor="@color/title_text_color"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="11dp"
                 android:layout_marginRight="16dp"
-                android:text="@string/load_more"
-                android:textColor="@color/text_color_gray"
-                android:textSize="16sp" />
-        </RelativeLayout>
+                android:background="#f0f0f0"/>
 
-        <LinearLayout
-            android:id="@+id/ll_eye_new1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_1"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="12dp"
-                android:src="@drawable/hooview_gold_eye_point" />
-
-
-            <TextView
-                android:id="@+id/tv_eyes_news1"
+            <LinearLayout
+                android:id="@+id/ll_eye_new2"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="12dp"
-                android:ellipsize="end"
-                android:gravity="left|center_vertical"
-                android:maxLines="2"
-                android:text=""
-                android:textColor="@color/title_text_color"
-                android:textSize="14sp" />
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="11dp"
-            android:layout_marginRight="16dp"
-            android:background="#f0f0f0" />
+                <ImageView
+                    android:id="@+id/iv_2"
+                    android:layout_width="6dp"
+                    android:layout_height="6dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="12dp"
+                    android:src="@drawable/hooview_gold_eye_point"/>
 
-        <LinearLayout
-            android:id="@+id/ll_eye_new2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_eyes_news2"
+                    android:layout_width="match_parent"
+                    android:layout_height="54dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="12dp"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:maxLines="2"
+                    android:text=""
+                    android:textColor="@color/title_text_color"
+                    android:textSize="14sp"/>
+            </LinearLayout>
 
-            <ImageView
-                android:id="@+id/iv_2"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="12dp"
-                android:src="@drawable/hooview_gold_eye_point" />
-
-            <TextView
-                android:id="@+id/tv_eyes_news2"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="12dp"
-                android:ellipsize="end"
-                android:gravity="left|center_vertical"
-                android:maxLines="2"
-                android:text=""
-                android:textColor="@color/title_text_color"
-                android:textSize="14sp" />
-        </LinearLayout>
+                android:layout_height="1dp"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="16dp"
+                android:background="#f0f0f0"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="11dp"
-            android:layout_marginRight="16dp"
-            android:background="#f0f0f0" />
-
-        <LinearLayout
-            android:id="@+id/ll_eye_new3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_3"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="12dp"
-                android:src="@drawable/hooview_gold_eye_point" />
-
-            <TextView
-                android:id="@+id/tv_eyes_news3"
+            <LinearLayout
+                android:id="@+id/ll_eye_new3"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="12dp"
-                android:ellipsize="end"
-                android:gravity="left|center_vertical"
-                android:maxLines="2"
-                android:text=""
-                android:textColor="@color/title_text_color"
-                android:textSize="14sp" />
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/iv_3"
+                    android:layout_width="6dp"
+                    android:layout_height="6dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="12dp"
+                    android:src="@drawable/hooview_gold_eye_point"/>
+
+                <TextView
+                    android:id="@+id/tv_eyes_news3"
+                    android:layout_width="match_parent"
+                    android:layout_height="54dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="12dp"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:maxLines="2"
+                    android:text=""
+                    android:textColor="@color/title_text_color"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
