--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -198,5 +198,6 @@
 
     <color name="text_user_info_edit">#303030</color>
     <color name="text_color_orange">#ff6c24</color>
+    <color name="text_user_info_hint">#cccccc</color>
 
 </resources>
