--- a/elapp/src/main/res/layout/item_image_text_header.xml
+++ b/elapp/src/main/res/layout/item_image_text_header.xml
@@ -20,28 +20,55 @@
         <TextView
             android:id="@+id/image_text_follow"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:layout_marginTop="10dp"
-            android:layout_alignParentRight="true"
             android:text="1,714人关注"
-            android:textColor="#622d80"
+            android:textColor="@color/tab_text_color_selected"
             android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/image_text_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="16dp"
-            android:maxLines="1"
+            android:layout_height="22dp"
             android:layout_below="@+id/image_text_follow"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:maxLines="1"
             android:text="杜斯基的图文直播间"
-            android:textColor="#622d80"
+            android:textColor="@color/tab_text_color_selected"
             android:textSize="16sp"/>
-        
+
+        <TextView
+            android:id="@+id/image_text_tag"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_below="@+id/image_text_name"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:maxLines="1"
+            android:text="大盘解说，股票解析，个股分析"
+            android:textColor="@color/base_gray"
+            android:textSize="14sp"/>
 
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="#f8f8f8"/>
+
+    <TextView
+        android:id="@+id/image_text_old"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:paddingLeft="12dp"
+        android:paddingTop="10dp"
+        android:text="往期视频直播"
+        android:textColor="@color/base_gray"
+        android:textSize="14sp"/>
 
 </LinearLayout>
