--- a/elapp/src/main/res/values/dimens.xml
+++ b/elapp/src/main/res/values/dimens.xml
@@ -42,6 +42,7 @@
     <dimen name="text_size_18">18sp</dimen>
     <dimen name="text_size_17">17sp</dimen>
     <dimen name="text_size_16">16sp</dimen>
+    <dimen name="text_size_14">14sp</dimen>
     <dimen name="text_size_title_h1">15sp</dimen>
     <dimen name="text_size_title_h2">14sp</dimen>
     <dimen name="text_size_13">13sp</dimen>
